--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,6 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  
 }
 /* FIN CONTENEDOR PADRE */
 
@@ -360,7 +359,7 @@ body {
 
 .element:hover .front {
   width: 90px;
-  height: 75px;
+  height: 90px;
   left: calc(45% - 50px);
   top: calc(15% - 50px);
 }
@@ -429,7 +428,7 @@ body {
   position: absolute;
   right: 30px;
   top: 20px;
-  color: #ff6c57;
+  color: #5e5e5e;
   font-size: 1.3rem;
   z-index: 4;
 }
@@ -479,7 +478,7 @@ body {
 
 .app-image {
   width: 275px;
-  height: 550px;
+  height: 500px;
   background-color: #ffffff;
   border: 4px solid #393939;
   border-radius: 20px;
@@ -591,156 +590,262 @@ footer {
 }
 
 /* ----------------------------MEDIA QUERYS -------------------------*/
-  .menu-icon,
-  .menu-btn{
+.menu-icon,
+.menu-btn {
+  display: none;
+}
+@media (max-width: 1280px) {
+  /* BANNER */
+  #search-banner {
+    width: 1150px;
+  }
+}
+@media (max-width: 1200px) {
+  /* BANNER */
+  #search-banner {
+    width: 90%;
+    height: 500px;
+  }
+  /* PRODUCTOS */
+  #paquetes,
+  #app,
+  #category,
+  #marcas {
+    width: 95%;
+  }
+}
+@media (max-width: 1050) {
+  /* BANNER */
+  .bg-1 {
+    width: 150px;
+    height: 150px;
+  }
+  #search-banner {
+    background-size: 700px;
+  }
+  #category {
+    width: 90%;
+  }
+}
+
+@media (max-width: 965px) {
+  .navigation {
+    justify-content: space-between;
+    height: 65px;
+    padding: 35px 25px;
+  }
+
+  /* MENU HAMBURGUESA */
+  .navigation .menu {
+    display: none;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    z-index: 100;
+    background-color: white;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    border-bottom: 1px solid rgb(245, 245, 245);
+  }
+  .navigation .menu li {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+  .navigation .menu a {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    margin: 0px;
+    padding: 30px 20px;
+    border: 1px solid rgb(248, 247, 247, 0.5);
+  }
+
+  .menu-icon {
+    display: block;
+  }
+  .navigation .menu-icon {
+    cursor: pointer;
+    float: right;
+    padding: 5px;
+    position: relative;
+    user-select: none;
+    z-index: 2;
+  }
+  .navigation .menu-icon .nav-icon {
+    background-color: #141414cc;
+    height: 2px;
+    width: 25px;
+    display: block;
+    position: relative;
+    transition: background 0.2s ease-out;
+  }
+  .navigation .menu-icon .nav-icon::before,
+  .navigation .menu-icon .nav-icon::after {
+    background-color: #141414cc;
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: all ease-out 0.2s;
+  }
+
+  .navigation .menu-icon .nav-icon::before {
+    top: 7px;
+  }
+  .navigation .menu-icon .nav-icon::after {
+    top: -7px;
+  }
+  .navigation .menu-btn:checked ~ .menu-icon .nav-icon::before {
+    transform: rotate(-45deg);
+    top: 0px;
+  }
+  .navigation .menu-btn:checked ~ .menu-icon .nav-icon::after {
+    transform: rotate(45deg);
+    top: 0px;
+  }
+  .navigation .menu-btn:checked ~ .menu-icon .nav-icon {
+    background-color: transparent;
+  }
+
+  .navigation .menu-btn:checked ~ .menu {
+    display: block;
+  }
+  /* FIN MENU HAMBURGUESA */
+
+  /* BANNER */
+  #search-banner {
+    height: 400px;
+    background-size: 600px;
+  }
+  .bg-1 {
+    width: 260px;
+    height: 260px;
+  }
+  .bg-2 {
+    width: 100px;
+    height: 150px;
+  }
+  /* PRODUCTOS */
+  .product-container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .container {
+    width: 100%;
+    height: 100%;
+  }
+  .element {
+    width: 100%;
+  }
+  .front img {
+    object-fit: contain;
+  }
+  /* MARCAS */
+  .logo-cont {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  /* APP */
+  #app {
+    flex-direction: column;
+    height: 100%;
+    background-color: transparent;
+    margin-top: 0;
+    width: 90%;
+    max-width: 100%;
+  }
+  .app-image {
+    height: 450px;
+    width: 220px;
+  }
+  .app-texto {
+    max-width: 100%;
+    background-color: #ecf7ee;
+    padding: 20px;
+    border-radius: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-cont {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .footer-nav {
+    text-align: center;
+    margin-top: 10px;
+  }
+}
+@media (max-width: 750px) {
+  /* PRODUCTOS */
+  .element:hover .front {
+    width: 70px;
+    height: 70px;
+    left: calc(55% - 50px);
+    top: calc(20% - 50px);
+  }
+  #search-banner {
+    height: 300px;
+    background-size: 450px;
+  }
+  .search-banner-text {
+    margin-left: 20px;
+  }
+  .search-banner-text h1 {
+    font-size: 2rem;
+    line-height: 30px;
+  }
+  .bg-1 {
     display: none;
   }
-  @media (max-width:1280px) {
-    /* BANNER */
-    #search-banner{
-      width: 1150px;
-    }
+}
+
+@media (max-width: 500px) {
+  #search-banner {
+    height: 200px;
+    background-size: 300px;
   }
-  @media (max-width:1200px) {
-    /* BANNER */
-    #search-banner{
-      width: 90%;
-      height: 500px;
-    }
-    /* PRODUCTOS */
-    #paquetes,
-    #app,
-    #category,
-    #marcas{
-      width: 95%;
-    }
+  .search-banner-text {
+    margin-left: 0;
+    max-width: 100%;
   }
-    @media (max-width:1050) {
-      /* BANNER */
-      .bg-1{
-        width: 150px;
-        height: 150px;
-      }
-      #search-banner{
-        background-size: 700px;
-      }
-      #category{
-        width: 90%;
-      }
-      
-    }
+  .search-banner-text h1 {
+    font-size: 1.5rem;
+  }
+  .search {
+    width: 100%;
+    max-width: 100%;
+    height: 40px;
+    padding-left: 10px;
+  }
+  .search ion-icon {
+    font-size: 1.5rem;
+  }
+  .search .search-btn {
+    height: 30px;
+  }
+  .bg-2 {
+    width: 50px;
+  }
+  .category-container {
+    flex-wrap: wrap;
+  }
+  .footer-cont {
+    grid-template-columns: 1fr;
+  }
+  .footer-nav {
+    margin-top: 10px;
+  }
+}
 
-    @media (max-width:965px) {
-      .navigation{
-        justify-content: space-between;
-        height: 65px;
-        padding: 35px 25px;
-      }
-
-      /* MENU HAMBURGUESA */
-      .navigation .menu{
-        display: none;
-        position: absolute;
-        top: 65px;
-        left: 0;
-        z-index: 100;
-        background-color: white;
-        width: 100%;
-        padding: 0px;
-        margin: 0px;
-        border-bottom: 1px solid rgb(245, 245, 245);
-      }
-      .navigation .menu li{
-        width: 100%;
-        margin: 0px;
-        padding: 0px;
-      }
-      .navigation .menu a{
-        width: 100%;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        margin: 0px;
-        padding: 30px 20px;
-        border: 1px solid rgb(248, 247, 247,0.5);
-      }
-
-      .menu-icon{
-        display: block;
-
-      }
-      .navigation .menu-icon{
-        cursor: pointer;
-        float: right;
-        padding: 5px;
-        position: relative;
-        user-select: none;
-        z-index: 2;
-      }
-      .navigation .menu-icon .nav-icon{
-        background-color: #141414cc;
-        height: 2px;
-        width: 25px;
-        display: block;
-        position: relative;
-        transition: background 0.2s ease-out;
-      }
-      .navigation .menu-icon .nav-icon::before,
-      .navigation .menu-icon .nav-icon::after{
-        background-color: #141414cc;
-        content: '';
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transition: all ease-out 0.2s;
-
-      }
-    
-    .navigation .menu-icon .nav-icon::before{
-      top: 7px;
-    }
-    .navigation .menu-icon .nav-icon::after{
-      top: -7px;
-    }
-    .navigation .menu-btn:checked ~ .menu-icon .nav-icon::before{
-      transform: rotate(-45deg);
-      top: 0px;
-    }
-    .navigation .menu-btn:checked ~ .menu-icon .nav-icon::after{
-      transform: rotate(45deg);
-      top: 0px;
-    }
-    .navigation .menu-btn:checked ~ .menu-icon .nav-icon{
-      background-color: transparent;
-    }
-
-    .navigation .menu-btn:checked ~ .menu{
-        display: block;
-    }
-    /* FIN MENU HAMBURGUESA */
-    
-    /* BANNER */
-    #search-banner{
-      height: 400px;
-      background-size: 600px
-    }
-    .bg-2{
-      width: 100px;
-      height: 150px;
-    }
-    /* PRODUCTOS */
-    .product-container{
-      grid-template-columns: 1fr 1fr;
-    }
-    .container{
-      width: 100%;
-      height: 100%;
-    }
-    .element{
-      width: 100%;
-    }
-    .front img{
-      object-fit: contain;
-    }
-    }
+@media (max-width: 400px) {
+  .product-container {
+    grid-template-columns: 1fr;
+  }
+}
